--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#673AB7</color>
     <color name="colorPrimaryDark">#311B92</color>
     <color name="colorAccent">#7E57C2</color>
+    <color name="appe">#d7222d</color>
+
 </resources>
