--- a/app/src/main/res/drawable-anydpi/ic_font.xml
+++ b/app/src/main/res/drawable-anydpi/ic_font.xml
@@ -3,9 +3,9 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#FFFFFF"
+    android:tint="#000000"
     android:alpha="0.8">
     <path
-        android:fillColor="#FF000000"
+        android:fillColor="#000000"
         android:pathData="M9.93,13.5h4.14L12,7.98zM20,2L4,2c-1.1,0 -2,0.9 -2,2v16c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2L22,4c0,-1.1 -0.9,-2 -2,-2zM15.95,18.5l-1.14,-3L9.17,15.5l-1.12,3L5.96,18.5l5.11,-13h1.86l5.11,13h-2.09z"/>
 </vector>
