--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,86 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F2F2F2"
     tools:context=".MainActivity">
+
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:layout_marginTop="5dp"
+                android:textColor="#FF5722"
+                android:layout_gravity="center"
+                android:textSize="22dp"
+                android:textStyle="bold"
+                />
+
+            <com.github.eltohamy.materialhijricalendarview.MaterialHijriCalendarView
+                android:id="@+id/calendarView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                app:mcv_arrowColor="?attr/colorPrimary"
+                app:mcv_calendarDiff="2"
+                app:mcv_dateTextAppearance="@style/CustomDayTextAppearance"
+                app:mcv_firstDayOfWeek="thursday"
+                app:mcv_headerTextAppearance="@style/HeaderAppearance"
+                app:mcv_leftArrowMask="@drawable/ic_baseline_arrow_circle_left_24"
+                app:mcv_monthLabels="@array/custom_months"
+                app:mcv_rightArrowMask="@drawable/ic_baseline_arrow_circle_right_24"
+                app:mcv_selectionColor="?attr/colorPrimary"
+                app:mcv_showOtherDates="all"
+                app:mcv_tileSize="50dp"
+                app:mcv_weekDayLabels="@array/custom_weekdays"
+                app:mcv_weekDayTextAppearance="?android:attr/textAppearanceMedium" />
+
+               <LinearLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_marginTop="10dp"
+                   android:layout_marginRight="10dp"
+                   android:padding="5sp"
+                   android:layout_marginLeft="10dp"
+                   android:background="@drawable/layout_bg"
+                   android:orientation="vertical">
+
+
+                   <TextView
+                       android:id="@+id/textView2"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:gravity="center"
+                       android:textStyle="bold"
+                       android:text="Add Hijri Date Widgets To Yor HomeScreen" />
+                   <TextView
+                       android:id="@+id/textView3"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:gravity="start"
+                       android:textStyle="bold"
+                       android:text="@string/widget_text" />
+               </LinearLayout>
+
+
+        </LinearLayout>
+    </ScrollView>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
