--- a/app/src/main/res/layout/widget_layout_coda.xml
+++ b/app/src/main/res/layout/widget_layout_coda.xml
@@ -40,6 +40,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/touchid"
         android:layout_marginTop="-10dp"
         android:weightSum="1">
         <android.widget.TextClock
