--- a/app/src/main/res/layout/widget_layout_notosans.xml
+++ b/app/src/main/res/layout/widget_layout_notosans.xml
@@ -13,6 +13,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/touchid"
         android:weightSum="2">
         <android.widget.TextClock
             android:id="@+id/clockLeft"
