--- a/app/src/main/res/layout/widget_layout_coda.xml
+++ b/app/src/main/res/layout/widget_layout_coda.xml
@@ -25,6 +25,9 @@
             android:id="@+id/clock"
             style="@style/ClockStyle"
             android:fontFamily="@font/coda"
+            android:textSize="34sp"
+            android:textColor="@color/white"
+            android:format12Hour="hh:mm"
             android:layout_weight="2"
             android:gravity="center"
             android:visibility="visible" />
@@ -54,6 +57,8 @@
             android:id="@+id/date"
             style="@style/ClockStyle"
             android:fontFamily="@font/coda"
+            android:textSize="18sp"
+            android:format12Hour="dd-MMM-yyyy"
             android:layout_weight="1"
             android:gravity="center"
             android:visibility="visible" />
