--- a/app/src/main/res/layout/widget_layout_default.xml
+++ b/app/src/main/res/layout/widget_layout_default.xml
@@ -25,6 +25,9 @@
             android:id="@+id/clock"
             style="@style/ClockStyle"
             android:layout_weight="2"
+            android:textSize="34sp"
+            android:textColor="@color/white"
+            android:format12Hour="hh:mm"
             android:gravity="center"
             android:visibility="visible" />
         <android.widget.TextClock
@@ -49,6 +52,9 @@
             android:id="@+id/date"
             style="@style/ClockStyle"
             android:layout_weight="1"
+            android:textSize="18sp"
+            android:format12Hour="dd-MMM-yyyy"
+            android:textColor="@color/white"
             android:gravity="center"
             android:visibility="visible" />
         <android.widget.TextClock
