--- a/app/src/main/res/layout/widget_layout_imprima.xml
+++ b/app/src/main/res/layout/widget_layout_imprima.xml
@@ -26,6 +26,9 @@
             android:id="@+id/clock"
             style="@style/ClockStyle"
             android:fontFamily="@font/imprima"
+            android:textSize="34sp"
+            android:textColor="@color/white"
+            android:format12Hour="hh:mm"
             android:layout_weight="2"
             android:gravity="center"
             android:visibility="visible" />
@@ -53,6 +56,8 @@
             android:id="@+id/date"
             style="@style/ClockStyle"
             android:fontFamily="@font/imprima"
+            android:textSize="18sp"
+            android:format12Hour="dd-MMM-yyyy"
             android:layout_weight="1"
             android:gravity="center"
             android:visibility="visible" />
