--- a/app/src/main/res/layout/widget_layout_ubuntulight.xml
+++ b/app/src/main/res/layout/widget_layout_ubuntulight.xml
@@ -26,6 +26,9 @@
             android:id="@+id/clock"
             style="@style/ClockStyle"
             android:fontFamily="@font/ubuntu_light"
+            android:textSize="34sp"
+            android:textColor="@color/white"
+            android:format12Hour="hh:mm"
             android:layout_weight="2"
             android:gravity="center"
             android:visibility="visible" />
@@ -55,6 +58,8 @@
             android:fontFamily="@font/ubuntu_light"
             android:layout_weight="1"
             android:gravity="center"
+            android:textSize="18sp"
+            android:format12Hour="dd-MMM-yyyy"
             android:visibility="visible" />
         <android.widget.TextClock
             android:id="@+id/dateRight"
