--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,8 @@
     <color name="colorPrimaryDark">#311B92</color>
     <color name="colorAccent">#7E57C2</color>
     <color name="appe">#d7222d</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="background">#F2F2F2</color>
 
 </resources>
