--- a/app/src/main/res/drawable-hdpi/box.xml
+++ b/app/src/main/res/drawable-hdpi/box.xml
@@ -4,7 +4,6 @@
     <solid android:color="#FFFFFF" />
 
     <corners
-        android:topLeftRadius="16dp"
-        android:topRightRadius="16dp" />
+        android:radius="18dp" />
 
 </shape>
