--- a/app/src/main/res/drawable-hdpi/box3.xml
+++ b/app/src/main/res/drawable-hdpi/box3.xml
@@ -1,10 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="#FFFFFF" />
+    <solid android:color="#F3F3F3" />
 
     <corners
-        android:topLeftRadius="16dp"
-        android:topRightRadius="16dp" />
+        android:radius="18dp" />
 
 </shape>
