--- a/app/src/main/res/drawable/layout_cr.xml
+++ b/app/src/main/res/drawable/layout_cr.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorAccent"/>
-    <stroke android:width="3dp" android:color="@color/colorAccent" />
-    <corners android:radius="15dp"/>
+    <solid android:color="#f15482"/>
+    <stroke android:width="3dp" android:color="#f15482" />
+    <corners android:radius="360dp"/>
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
