--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -58,4 +58,28 @@
         <item>2</item>
         <item>3</item>
     </string-array>
+
+    <string-array name="listArray">
+        <item>dd,MM,yyyy</item>
+        <item>dd-MM-yyyy</item>
+        <item>dd/MM/yyyy</item>
+        <item>dd,MMMM</item>
+        <item>dd-MMMM</item>
+        <item>dd/MMMM</item>
+        <item>dd,MMMM,yyyy</item>
+        <item>dd-MMMM-yyyy</item>
+        <item>dd/MMMM/yyyy</item>
+    </string-array>
+
+    <string-array name="listValues">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+    </string-array>
 </resources>
