--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="appe">#d7222d</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="mainColor">#6660fe</color>
     <color name="background">#F2F2F2</color>
+    <color name="gray">#9E9C9C</color>
 
 </resources>
